# BlackHole

./: .gitignore  CMakeLists.txt  README.md  blog_post.md
.claude/: settings.local.json
assets/skybox/: milkyway.hdr  test.hdr
scripts/: build_openvdb.ps1
shaders/: blackbody.glsl  common.glsl  disk.glsl  env.glsl  fullscreen.vert.glsl  integrators.glsl  kerr.glsl  post.frag  post.vert  sky.glsl  tonemap.frag.glsl  trace.comp  trace.comp.glsl  volume.glsl
src/: main.cpp
src/app/: AssetLoad.cpp  AssetLoad.h  Blackbody.cpp  Blackbody.h  Renderer.cpp  Renderer.h  app.cpp  app.h  camera.cpp  camera.h  config.cpp  config.h  offline.cpp  offline.h  preview.h
src/io/: exr_writer.cpp  exr_writer.h  hdr_loader.cpp  hdr_loader.h  vdb_loader.cpp  vdb_loader.h
src/vk/: Context.cpp  Context.h  Pipeline.cpp  Pipeline.h  Resources.cpp  Resources.h  allocator.cpp  allocator.h  compute_pipeline.cpp  compute_pipeline.h  descriptor.cpp  descriptor.h  device.cpp  device.h  image.cpp  image.h  instance.cpp  instance.h  swapchain.cpp  swapchain.h
tools/: make_test_volume.cpp
